wasm/chess2-wasm/build.log
    Checking chess2-wasm v0.1.0 (C:\Users\kenet\IdeaProjects\g1\wasm\chess2-wasm)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `js_sys`
  --> src\lib.rs:74:27
   |
74 |                 let obj = js_sys::Object::new();
   |                           ^^^^^^ use of unresolved module or unlinked crate `js_sys`
   |
   = help: if you wanted to use a crate named `js_sys`, use `cargo add js_sys` to add it to your `Cargo.toml`
help: there is an enum variant `serde_json::Value::Object`; try using the variant's enum
   |
74 -                 let obj = js_sys::Object::new();
74 +                 let obj = serde_json::Value::new();
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `js_sys`
  --> src\lib.rs:75:17
   |
75 |                 js_sys::Reflect::set(&obj, &"row".into(), &JsValue::from(tr as u32)).unwrap();
   |                 ^^^^^^ use of unresolved module or unlinked crate `js_sys`
   |
   = help: if you wanted to use a crate named `js_sys`, use `cargo add js_sys` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `js_sys`
  --> src\lib.rs:76:17
   |
76 |                 js_sys::Reflect::set(&obj, &"col".into(), &JsValue::from(tc as u32)).unwrap();
   |                 ^^^^^^ use of unresolved module or unlinked crate `js_sys`
   |
   = help: if you wanted to use a crate named `js_sys`, use `cargo add js_sys` to add it to your `Cargo.toml`

warning: unused imports: `Board`, `Move`, and `Setup`
 --> src\lib.rs:2:33
  |
2 | use shakmaty::{Chess, Position, Board, Color as SColor, Role, Square as SSquare, Move, Setup};
  |                                 ^^^^^                                            ^^^^  ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `chess2-wasm` (lib) generated 1 warning
error: could not compile `chess2-wasm` (lib) due to 3 previous errors; 1 warning emitted
